--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
 <!-- git init bog'laydi -->
 <!-- git status holatni tekshiradigan  -->
-
+<!-- Git add . yoki -A bilan fayillarni yuborishga qo'shadi -->
+<!-- git commit -m "comit yozin" -->
 </body>
 
 </html>
