--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <!-- git status holatni tekshiradigan  -->
 <!-- Git add . yoki -A bilan fayillarni yuborishga qo'shadi -->
 <!-- git commit -m "comit yozin" -->
+<h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, adipisci?</h1>
 </body>
 
 </html>
